cluster/apps/development/documentation/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    reloader.stakater.com/auto: "true"
  name: documentation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: documentation
  template:
    metadata:
      labels:
        app: documentation
    spec:
      securityContext:
        fsGroup: 65533
      volumes:
        - name: data
          emptyDir: {}
        - name: docs
          emptyDir: {}
        - name: git-secret
          secret:
            defaultMode: 288
            secretName: git-secret
        - name: scripts
          configMap:
            name: docs-watch-script
            defaultMode: 0755
      containers:
        - name: git-sync
          image: k8s.gcr.io/git-sync/git-sync:v3.6.2
          volumeMounts:
            - name: data
              mountPath: /git
            - name: git-secret
              mountPath: /etc/git-secret
          args:
            - "-ssh"
            - "-repo=git@github.com:tuxpeople/documentation-private.git"
            - "-depth=1"
            - "-wait=180"
            - "-dest=current"
            - "-root=/git"
            - "-branch=master"
          securityContext:
            runAsUser: 65533
        - name: mkdocs
          image: registry.eighty-three.me/tuxpeople/mkdocs:v0.2.0
          command: ["/scripts/watch.sh"]
          volumeMounts:
            - name: data
              mountPath: /git
            - name: docs
              mountPath: /docs
            - name: scripts
              mountPath: "/scripts"
          securityContext:
            runAsUser: 65533
        - name: webserver
          image: busybox:1.36.0
          command: ["/bin/sh"]
          args: ["-c", "httpd -f -p 8000 -h /docs/"]
          volumeMounts:
            - name: docs
              mountPath: /docs
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
          securityContext:
            runAsUser: 65533
