cluster/apps/development/documentation/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: documentation
  labels:
    app: documentation
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: documentation
